# TermGFX

./: LICENSE  README.md  setup.cfg
examples/: gol.py  lines.py  loser.py  rects.py  some_shapes.py
src/TermGFX/: engine.py  shapes.py
src/TermGFX.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
