[metadata]
name = TermGFX
version = 0.0.1
author = Froloket64
author_email = ket.frol2006@gmail.com
description = Terminal graphics with zero deps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Froloket64/TermGFX
project_urls =
    Bug Tracker = https://github.com/Froloket64/TermGFX/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src